# CppCode

./: .clangd  .gitignore  CMakeLists.txt  README.md  hello.c  main  person.txt
00-buildin/: define.c  define.i
00-compile/: define.c  register.c
00-grammer/: autotype.cpp  head_namespace.cpp  inline.cpp  iterator.cpp  kw_const.cpp  kw_constexpr.cpp  kw_del_default.cpp  kw_extern.cpp  kw_static.cpp  kw_volatile.cpp  lambda.cpp  loop.cpp  macro_define.c  operation.cpp  scope.cpp  typedef.cpp
01-DataType/: app  app.cpp  array.cpp  assembly  assembly.cpp  autotype.cpp  boolean.cpp  char.cpp  comment.cpp  const.cpp  container.cpp  dataTrans.cpp  enum.cpp  flowcontrol.cpp  function.cpp  head_namespace.cpp  inout.cpp  lambda  lambda.cpp  loop.cpp  main.cpp  map.cpp  number.cpp  operation.cpp  point.cpp  scope.cpp  sizeof.cpp  string.cpp  struct  struct.cpp  typedef.cpp  unions.cpp  vector.cpp  void.cpp
01-datatype/: array.cpp  enum.cpp  main.cpp  number.cpp  variant.cpp  vector.cpp  void.cpp
02-File/: file_inode.c  file_stat.c  main  read_write_file.c  std_in_out.cpp  stdscanf.c  struct_to_file  struct_to_file.c
02-File/.temp/: matrix1.txt  matrix2.txt
02-Grammer/: const.cpp  flowcontrol.cpp  loop.cpp  scope.cpp  variadic_template.cpp
02-iofs/: dir_open_close.c  dlopen.c  file_dup.c  file_link.c  file_spare.c  fs_op.cpp  index.c  open_close_file.c  read_write_file.c
02-iofs/.temp/: matrix3.txt
03-Lua/: app.c
03-oop/: ClassMain.cpp  Complex.cpp  IntArray.cpp  Modifier.cpp  Shape.cpp  Template.cpp  Vehicle.cpp
04-webserver/: index.html  main.c
05-designPattern/: command.cpp  observer.cpp  singleton.cpp  strategy.cpp
06-coroutine/: async.cpp  atomic.cpp  condition.cpp  coroutine.cpp  futures.cpp  promise.cpp
06-memory/: work.cpp
07-Perfermance/: benchmark.cpp  false_sharing.cpp  main  mv_bench.cpp  read_bench.cpp  rvo.cpp  sso.cpp  sso_benchmark.cpp  struct_layout.cpp  vector_args.cpp  vf_call.cpp
08-Algorithm/: dgemm.cpp  fibonacci.cpp
08-Algorithm/sm4/: main
09-Ipc/: ipc-pipe.cpp  ipc-unix.cpp  unix
09-ipc/: ShmData.cpp  ipc-mq.cpp  ipc-shm.cpp
10-Oop/: singleton.cpp
10-time/: chrono.cpp  time_op.c
SM4_demo/: demo.c
ThreadPool/: Pool.cpp  ThreadPool.c
api/: fork.cpp  process.cpp
epoll/: api.cpp  tcp_client.cpp  tcp_server.cpp
include/: Complex.h  DataType.h  Factory.h  IntArray.h  Modifier.h  Pointers.h  Shape.h  Template.h  Vehicle.h  cmod.h  cppmod.h  mkl.h  mod.h  rng.h  spinlock.h
mixccplus/c_call_cpp/: CppAdd.cpp  CppAdd.h  READMD.md  (+3 more)
point/: basic.cpp  constptr.cpp  funcpoint.cpp  funptr.c  intelpointer.cpp  newdelete.cpp  nullptr.cpp  point.cpp  ptrlevel.cpp  wildpoint.cpp
project/: LruNode.cpp  lrucache.cpp
server/: tcp_normal_client.cpp
signal/: handle.cpp  type.cpp
src/: ThreadPool.c  construct.cpp  lua.c  main.cpp  memory.cpp  newdelete.cpp  time_op.c  timing.cpp
system/: newdelete.cpp
thread/: Pool.cpp
thread_pool/: ThreadPool.c  thread_pool.h
times/: t_timespec.c  time_op.c
(+12 files in other folders)
